lessons13/manifests/deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lessons13-v1
  labels:
    app: lessons13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lessons13
  template:
    metadata:
      labels:
        app: lessons13
        version: v1
    spec:
      containers:
        - name: task05
          image: alexdolg/otus:lesson13-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
