lessons13/manifests/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: lessons13-v2
  labels:
    app: lessons13
    version: v2
spec:
  selector:
    app: lessons13
    version: v2
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8000
