lessons13/manifests/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lessons13-ingress
spec:
  hosts:
    - '*'
  gateways:
    - lessons13-gateway
  http:
    - route:
        - destination:
            host: lessons13-v1
          weight: 50
        - destination:
            host: lessons13-v2
          weight: 50
